@@ -1,3 +1,6 @@
+22/06/2022 v.0.44 Neha
+	[ZB-9062] advance payment lines : value issue
+
 17/06/2022 v.0.43 Neha
 	[ZB-8671] JV entries/Vendor invoice Adjustment
 
